feat: add category, tags, and image fields to blog posts for enhanced metadata and organization

--- a/content/posts/life/travel/kyoto-guide.mdx
+++ b/content/posts/life/travel/kyoto-guide.mdx
@@ -2,6 +2,9 @@
 title: 京都旅遊指南
 date: 2024-01-04
 description: 分享京都旅遊的必去景點和美食推薦
+category: '技術文章'
+tags: ['React', 'JavaScript', '前端']
+image: '/projects/hot-now.jpg'
 slug: kyoto-travel-guide
 ---
 
