--- a/content/posts/tech/frontend/react-hooks.mdx
+++ b/content/posts/tech/frontend/react-hooks.mdx
@@ -2,6 +2,9 @@
 title: React Hooks 入門指南
 date: 2024-01-03
 description: 介紹React Hooks的基本概念和使用方式
+category: '技術文章'
+tags: ['React', 'JavaScript', '前端']
+image: '/projects/hot-now.jpg'
 slug: react-hooks-guide
 ---
 
