--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -2,6 +2,9 @@
 title: 歡迎來到我的部落格
 date: 2024-01-01
 description: 這是我的第一篇文章
+category: '技術文章'
+tags: ['React', 'JavaScript', '前端']
+image: '/projects/hot-now.jpg'
 slug: hello-world
 ---
 
