--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -1,9 +1,28 @@
 ---
-title: 歡迎來到我的部落格
+title: 歡迎來到我的部落格歡迎來到我的部落格歡迎來到我的部落格歡迎來到我的部落格歡迎來到我的部落格歡迎來到我的部落格歡迎來到我的部落格歡迎來到我的部落格歡迎來到我的部落格歡迎來到我的部落格
 date: 2024-01-01
-description: 這是我的第一篇文章
+description: 這是我的第一篇文章這是我的第一篇文章這是我的第一篇文章這是我的第一篇文章這是我的第一篇文章這是我的第一篇文章這是我的第一篇文章這是我的第一篇文章這是我的第一篇文章這是我的第一篇文章這是我的第一篇文章
 category: '技術文章'
-tags: ['React', 'JavaScript', '前端']
+tags:
+    [
+        'React',
+        'JavaScript',
+        '前端',
+        'JavaScript',
+        '前端',
+        'JavaScript',
+        '前端',
+        'JavaScript',
+        '前端',
+        'JavaScript',
+        '前端',
+        'JavaScript',
+        '前端',
+        'JavaScript',
+        '前端',
+        'JavaScript',
+        '前端',
+    ]
 image: '/projects/hot-now.jpg'
 slug: hello-world
 ---
