refactor: update terminology in MDX and component files to use "元件" instead of "組件" for consistency

--- a/content/posts/tech/frontend/react-hooks.mdx
+++ b/content/posts/tech/frontend/react-hooks.mdx
@@ -14,7 +14,7 @@ React Hooks 是 React 16.8 中引入的新功能，讓你可以在不編寫 clas
 
 ## 什麼是 Hooks？
 
-Hooks 是一些可以讓你在函數組件裡「鉤入」React state 及生命週期等特性的函數。
+Hooks 是一些可以讓你在函數元件裡「鉤入」React state 及生命週期等特性的函數。
 
 ## 常用的 Hooks
 
@@ -58,4 +58,4 @@ function Example() {
 
 ## 結論
 
-Hooks 讓函數組件更加強大，也讓程式碼更加簡潔和可讀。
+Hooks 讓函數元件更加強大，也讓程式碼更加簡潔和可讀。
