--- a/content/posts/tech/frontend/react-hooks.mdx
+++ b/content/posts/tech/frontend/react-hooks.mdx
@@ -56,6 +56,25 @@ function Example() {
 }
 ```
 
+```jsx
+import React, { useState, useEffect } from 'react';
+
+function Example() {
+    const [count, setCount] = useState(0);
+
+    useEffect(() => {
+        document.title = `你點了 ${count} 次`;
+    });
+
+    return (
+        <div>
+            <p>你點了 {count} 次</p>
+            <button onClick={() => setCount(count + 1)}>點我</button>
+        </div>
+    );
+}
+```
+
 ## 結論
 
 Hooks 讓函數元件更加強大，也讓程式碼更加簡潔和可讀。
