feat: update blog content by adding new articles on Git Commit Messages, GSAP, Zustand, and more, while removing outdated posts for better relevance

--- a/content/posts/2025/03/2025-03-27-Docker實用指南-前端開發者的容器化入門.mdx
+++ b/content/posts/2025/03/2025-03-27-Docker實用指南-前端開發者的容器化入門.mdx
@@ -1,10 +1,11 @@
 ---
+category: Code
 title: Docker 實用指南：前端開發者的容器化入門
-date: 2025-01-04
+date: 2025-03-27
 description: 詳細介紹 Docker 的核心概念和實用技巧，包括容器、映像檔、Dockerfile 等，並提供 Next.js 專案的實際範例，幫助前端開發者輕鬆掌握容器化技術。
-category: 'Code'
-tags: ['React', 'JavaScript', '前端']
-slug: dovker-travel-guide1
+tags: ['Docker', 'Next.js', 'DevOps', 'Container', 'CI/CD']
+image: /blog/posts/2025/03/docker.png
+slug: docker-practical-guide-frontend-developers
 ---
 
 ## 什麼是 Docker？
